<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <Button
        android:id="@+id/button"
        style="@style/OrangeButton"
        android:backgroundTint="@color/orange"
        android:text="@string/get_started"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/LogoImage"
        android:layout_width="@dimen/dp_300"
        android:layout_height="@dimen/dp_300"
        android:layout_margin="@dimen/dp_50"

        android:layout_marginTop="@dimen/dp_112"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_movie" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_24"
        android:text="@string/welcome_to_clonekinopoisk"
        android:textColor="@color/black"
        android:textSize="@dimen/dp_32"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.413"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_50"
        android:layout_marginEnd="@dimen/dp_50"
        android:layout_marginBottom="@dimen/dp_16"
        android:text="@string/the_best_movie_tracking_app_of_the_century_to_make_your_days_great"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>