<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/LogoImage"
       style="@style/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_movie" />

    <TextView
        android:id="@+id/textInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:text="@string/create_your_account"
        android:textAlignment="center"
        android:textSize="@dimen/dp_32"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LogoImage" />

    <EditText
        android:id="@+id/editEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_32"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInfo" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_32"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editEmailAddress" />

    <Button
        android:id="@+id/signUpButton"
       style="@style/OrangeButton"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPassword" />

<!--    <TextView-->
<!--        android:id="@+id/textViewContinueWith"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_margin="32dp"-->
<!--        android:text="or continue with"-->
<!--        android:textAlignment="center"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/signUpButton" />-->

<!--    <ImageButton-->
<!--        android:id="@+id/imageButtonFacebook"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:backgroundTint="#00FFFFFF"-->
<!--        android:padding="24dp"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/buttonSwitching"-->
<!--        app:layout_constraintEnd_toStartOf="@+id/imageButtonGoogle"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textViewContinueWith"-->
<!--        app:layout_constraintVertical_bias="0.0"-->
<!--        app:srcCompat="@drawable/ic_facebook" />-->

<!--    <ImageButton-->
<!--        android:id="@+id/imageButtonGoogle"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:backgroundTint="#00FFFFFF"-->
<!--        android:padding="24dp"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/buttonSwitching"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.498"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textViewContinueWith"-->
<!--        app:layout_constraintVertical_bias="0.0"-->
<!--        app:srcCompat="@drawable/ic_google" />-->

<!--    <ImageButton-->
<!--        android:id="@+id/imageButtonTwitter"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:padding="24dp"-->
<!--        android:backgroundTint="#00FFFFFF"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/buttonSwitching"-->
<!--        app:layout_constraintStart_toEndOf="@+id/imageButtonGoogle"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textViewContinueWith"-->
<!--        app:layout_constraintVertical_bias="0.0"-->
<!--        app:srcCompat="@drawable/ic_twitter" />-->

    <Button
        android:id="@+id/buttonSwitching"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_32"
        android:text="@string/already_have_an_account_sign_in"
        android:textColor="@color/black"
        android:backgroundTint="@color/not_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>