<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/mainImageFilm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/ratingFilmInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_16"
            android:background="@drawable/rectangle_rounded"
            android:backgroundTint="@color/blue"
            android:textColor="@color/white"
            android:textSize="@dimen/dp_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="8.0"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/nameFilm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_16"
            android:textSize="@dimen/dp_32"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/buttonFavourite"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainImageFilm"
            tools:text="Avatar: " />

        <ImageButton
            android:id="@+id/buttonFavourite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/not_color"
            android:background="@drawable/rectangle_rounded"
            android:layout_margin="@dimen/dp_16"
            android:padding="@dimen/dp_12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainImageFilm"
            app:srcCompat="@drawable/ic_favourite_not_active" />

        <TextView
            android:id="@+id/textViewYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:padding="4dp"
            android:textStyle="bold"
            android:background="@color/blue"
            android:textColor="@color/white"
            app:layout_constraintCircleRadius="@dimen/dp_12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameFilm"
            tools:text="2022" />

        <TextView
            android:id="@+id/age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:padding="4dp"
            android:background="@color/light_grey"
            app:layout_constraintStart_toEndOf="@+id/textViewYear"
            app:layout_constraintTop_toBottomOf="@+id/nameFilm"
            tools:text="13+" />

        <TextView
            android:id="@+id/genres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="@dimen/dp_12"
            android:padding="4dp"
            android:background="@color/light_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/age"
            app:layout_constraintTop_toBottomOf="@+id/nameFilm"
            tools:text="фантастикf" />



        <TextView
            android:id="@+id/descriptionShort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginStart="14dp"
            android:padding="2dp"
            android:text="@string/n_a"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewYear" />

        <TextView
            android:id="@+id/descriptionLong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/n_a"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descriptionShort" />

        <TextView
            android:id="@+id/TextViewStaff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/staff"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descriptionLong" />

        <TextView
            android:id="@+id/notInfoStaff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_data_available"
            android:textSize="@dimen/dp_16"
            android:visibility="gone"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/TextViewStaff"
            tools:layout_editor_absoluteX="-16dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/containerStaff"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:layout_constraintTop_toBottomOf="@+id/TextViewStaff"
            tools:layout_editor_absoluteX="-16dp" />

        <TextView
            android:id="@+id/TextViewTreler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/trailer"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/containerStaff" />


        <ImageButton
            android:id="@+id/buttonTreyler"
            android:layout_width="55dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rectangle_rounded"
            android:backgroundTint="@color/orange"
            app:layout_constraintBottom_toBottomOf="@+id/TextViewTreler"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.95"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/TextViewTreler"
            android:src="@drawable/ic_play"/>

        <TextView
            android:id="@+id/TextViewRelated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/related"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TextViewTreler" />
        <TextView
            android:id="@+id/notInfoRelated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_data_available"
            android:textSize="@dimen/dp_16"
            android:visibility="gone"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/TextViewRelated"
            tools:layout_editor_absoluteX="-16dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/containerRelated"
            android:layout_width="match_parent"
            android:layout_height="256dp"
            app:layout_constraintTop_toBottomOf="@+id/TextViewRelated"
            tools:layout_editor_absoluteX="-16dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>



